--- a/frontend/views/index.ejs
+++ b/frontend/views/index.ejs
@@ -16,13 +16,24 @@
       </div>
     </div>
 
-    <div class="img-container item2">
+    <div class="item2">
       <div class="circle-gradient watermelon"></div>
-      <img src="../public/img/acrobat.png" alt="" class="acrobat" />
+      <div class="character-item">
+        <div class="card character">
+          <div class="face front"></div>
+          <div class="face back"></div>
+        </div>
+      </div>
     </div>
-    <div class="img-container item3">
+
+    <div class="item3">
       <div class="circle-gradient yellow"></div>
-      <img src="../public/img/clown-juggling-fruits.png" alt="" class="clown" />
+      <div class="food-item">
+        <div class="card food">
+          <div class="face front"></div>
+          <div class="face back"></div>
+        </div>
+      </div>
     </div>
   </section>
   <section id="about">
