--- a/frontend/public/css/home.css
+++ b/frontend/public/css/home.css
@@ -4,7 +4,7 @@
 #home {
   grid-template-columns: repeat(1, 2fr) repeat(2, 1fr);
   gap: 10px;
-  grid-template-rows: repeat(4, 1fr);
+  grid-template-rows: repeat(2, 1fr);
   display: grid;
   margin: 0 50px;
 }
@@ -18,7 +18,7 @@
 
 .item1 {
   grid-column: 1;
-  grid-row: 1 / 5;
+  grid-row: 1 / 3;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -32,72 +32,116 @@
 
 .item3 {
   grid-column: 3;
-  grid-row: 3 / 5;
+  grid-row: 2;
 }
 
-/*  circus characters styling */
-.img-container {
-  display: inline-block;
-  position: relative;
-}
-
-#home .circle-gradient.watermelon {
+/*  images - flipping cards styling  */
+#home .circle-gradient {
   width: 200px;
 }
 
-#home .circle-gradient.yellow {
-  width: 250px;
-}
-
-#home .clown {
-  height: 320px;
+.character-item,
+.food-item {
   width: auto;
-  position: absolute;
-  top: -30%;
+  transition: all 1s ease-out;
+  perspective: 600px;
 }
 
-#home .acrobat {
+.character-item {
   height: 300px;
-  width: auto;
-  position: absolute;
-  left: 10%;
 }
+
+.food-item {
+  height: 150px;
+}
+
+.character-item:hover,
+.food-item:hover {
+  transform: scale(1.1) translateY(20px);
+  cursor: pointer;
+}
+
+.card {
+  width: 100%;
+  height: 100%;
+  transition: transform 1s;
+  transform-style: preserve-3d;
+  cursor: pointer;
+  position: relative;
+}
+
+.face {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+.front {
+  background-image: url(../img/acrobat.png);
+}
+
+.back {
+  background-image: url(../img/clown-juggling-fruits.png);
+  transform: rotateY(180deg);
+}
+
+.food-item .front {
+  background-image: url(../img/avocado.png);
+}
+
+.food-item .back {
+  background-image: url(../img/watermelon.png);
+}
+
+.flip {
+  transform: rotateY(180deg);
+}
+
+/* @media only screen and (max-width: 720px) {
+  #home {
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+  }
+
+  .item1 {
+    margin-right: 20px;
+  }
+
+  .item2 {
+    display: none;
+  }
+} */
 
 @media only screen and (min-width: 1200px) and (min-height: 800px) {
-  #home .circle-gradient.watermelon {
+  #home .circle-gradient {
     width: 300px;
   }
 
-  #home .circle-gradient.yellow {
-    width: 350px;
-  }
-
-  #home .clown {
-    height: 420px;
-    top: -20%;
-  }
-
-  #home .acrobat {
+  .character-item {
     height: 400px;
+  }
+
+  .food-item {
+    height: 200px;
   }
 }
 
 @media only screen and (min-width: 1500px) and (min-height: 900px) {
-  #home .circle-gradient.watermelon {
+  #home .circle-gradient {
     width: 400px;
   }
 
-  #home .circle-gradient.yellow {
-    width: 450px;
+  .character-item {
+    height: 450px;
   }
 
-  #home .clown {
-    height: 460px;
-    top: -20%;
-  }
-
-  #home .acrobat {
-    height: 420px;
+  .food-item {
+    height: 250px;
   }
 }
 
