Adds animation on scroll for home section

--- a/frontend/views/index.ejs
+++ b/frontend/views/index.ejs
@@ -1,7 +1,7 @@
 <%- include('components/header') %>
 <div class="page-content">
   <section id="home">
-    <div class="item1">
+    <div class="item1" data-aos="slide-right" data-aos-duration="1000">
       <h1>VitaFun Fresh Fun Hub For VitaFresh Kids</h1>
       <p>
         Are you a ... tightrope walker? A magician? Perhaps you are an acrobat
@@ -16,7 +16,12 @@
       </div>
     </div>
 
-    <div class="item2">
+    <div
+      class="item2"
+      data-aos="zoom-in"
+      data-aos-duration="1500"
+      data-aos-delay="400"
+    >
       <div class="circle-gradient watermelon"></div>
       <div class="character-item">
         <div class="card character">
@@ -26,7 +31,12 @@
       </div>
     </div>
 
-    <div class="item3">
+    <div
+      class="item3"
+      data-aos="zoom-in"
+      data-aos-duration="1500"
+      data-aos-delay="800"
+    >
       <div class="circle-gradient yellow"></div>
       <div class="food-item">
         <div class="card food">
