--- a/frontend/views/components/footer.ejs
+++ b/frontend/views/components/footer.ejs
@@ -1,5 +1,6 @@
 <footer><p>&copy;2022 The Red Team</p></footer>
 
+<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 <script src="js/main.js"></script>
 </body>
 </html>
