--- a/frontend/views/index.ejs
+++ b/frontend/views/index.ejs
@@ -8,7 +8,12 @@
         or even a strong boy or girl? Take the quiz to find out what circus
         character suits you and what superfoods these amazing superhumans eat!
       </p>
-      <%- include('components/primary-btn') %>
+      <div>
+        <a class="primary-btn"
+          >Take The Quiz!
+          <div class="arrow-box"><span class="arrow">👉🏼</span></div></a
+        >
+      </div>
     </div>
 
     <div
