--- a/frontend/views/index.ejs
+++ b/frontend/views/index.ejs
@@ -9,7 +9,7 @@
         character suits you and what superfoods these amazing superhumans eat!
       </p>
       <div>
-        <a class="primary-btn"
+        <a class="primary-btn" href="/quiz"
           >Take The Quiz!
           <div class="arrow-box"><span class="arrow">👉🏼</span></div></a
         >
@@ -48,6 +48,35 @@
   </section>
   <section id="about">
     <h1>ABOUT</h1>
+    <div class="about-text">
+      <h2>The Website</h2>
+      <p class="about-site">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+        occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+        mollit anim id est laborum.
+      </p>
+
+      <h2>The Organisation</h2>
+      <p class="about-org">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+        occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+        mollit anim id est laborum.
+      </p>
+      <a class="primary-btn" href="/"
+        >Visit Vitafresh's website
+        <div class="arrow-box"><span class="arrow">👉🏼</span></div>
+      </a>
+
+      <h2>Contact Us</h2>
+    </div>
   </section>
 </div>
 
