--- a/frontend/public/css/home.css
+++ b/frontend/public/css/home.css
@@ -178,3 +178,25 @@
 }
 
 /*  About section */
+
+#about h1,
+.about-text {
+  margin: auto;
+  width: 50%;
+}
+
+#about h2 {
+  padding: 20px 0;
+}
+
+.about-site {
+  margin-bottom: 50px;
+}
+
+.about-org {
+  margin-bottom: 20px;
+}
+
+#about .primary-btn {
+  margin-bottom: 50px;
+}
