changes href value for the vitafresh website links

--- a/frontend/views/components/header.ejs
+++ b/frontend/views/components/header.ejs
@@ -33,7 +33,14 @@
         <li class="link recipes"><a href="/recipes">recipes</a></li>
 
         <!-- Link to vitafresh -->
-        <li class="link vitafresh"><a href="/vitafresh">vitafresh</a></li>
+        <li class="link vitafresh">
+          <a
+            href="https://www.google.com/"
+            target="_blank"
+            rel="noopener noreferrer"
+            >vitafresh</a
+          >
+        </li>
       </ul>
 
       <div>
@@ -68,9 +75,15 @@
           <hr />
 
           <!-- Link to vitafresh -->
-          <li class="link vitafresh"><a href="/vitafresh">vitafresh</a></li>
+          <li class="link vitafresh">
+            <a
+              href="https://www.google.com/"
+              target="_blank"
+              rel="noopener noreferrer"
+              >vitafresh</a
+            >
+          </li>
         </ul>
       </div>
     </nav>
     <img src="../public/img/flag-hangings.png" class="hangings" />
-
