--- a/frontend/views/index.ejs
+++ b/frontend/views/index.ejs
@@ -70,7 +70,11 @@
         occaecat cupidatat non proident, sunt in culpa qui officia deserunt
         mollit anim id est laborum.
       </p>
-      <a class="primary-btn" href="/"
+      <a
+        class="primary-btn"
+        href="https://www.google.com/"
+        target="_blank"
+        rel="noopener noreferrer"
         >Visit Vitafresh's website
         <div class="arrow-box"><span class="arrow">👉🏼</span></div>
       </a>
