--- a/frontend/public/css/base.css
+++ b/frontend/public/css/base.css
@@ -14,7 +14,6 @@ body {
   font-family: var(--base-font-family);
   font-weight: 400;
   background: var(--background-blue);
-  overflow-x: hidden;
 }
 
 ul {
@@ -31,7 +30,7 @@ h1 {
 
 h2 {
   font-family: var(--heading-font-family);
-  font-size: 1.2em;
+  font-size: 1.4em;
   text-transform: uppercase;
   font-weight: 400;
 }
@@ -140,11 +139,12 @@ a:hover {
 
 /* Header styling */
 .hangings {
-  position: fixed;
-  top: 70px;
-  left: 50px;
+  position: absolute;
+  top: 0;
+  left: 40px;
   width: 300px;
   height: auto;
+  padding-top: 80px;
   z-index: 3;
 }
 
@@ -189,14 +189,6 @@ nav li a {
 
 .active {
   color: var(--vita-watermelon);
-}
-
-/*  Responsive - larger desktop screens */
-@media only screen and (min-width: 1500px) and (min-height: 600px) {
-  .hangings {
-    width: 400px;
-    left: 10px;
-  }
 }
 
 /* Menu-icon styling */
@@ -309,31 +301,16 @@ nav li a {
 }
 
 /*  Main content styling */
-.page-content {
-  min-height: 100vh;
-  padding-top: 100px;
-}
-
+.page-content,
 section {
   min-height: 100vh;
+  padding-top: 100px;
 }
 
 /*  Responsive - smaller (mobile/tablet) screens */
 @media only screen and (max-width: 750px) {
   .page-content {
     padding-top: 200px;
-  }
-}
-
-@media only screen and (max-width: 500px),
-  only screen and (max-width: 1000px) and (max-height: 540px) {
-  .page-content {
-    padding-top: 100px;
-  }
-
-  .hangings {
-    position: static;
-    padding-top: 80px;
   }
 }
 
