--- a/frontend/views/recipes.ejs
+++ b/frontend/views/recipes.ejs
@@ -1,7 +1,12 @@
 <%- include('components/header') %>
-<div class="page-content">
-  <section>
-    <h1>RECIPES</h1>
+
+  <section id="recipe-1">
+    <h1>Tightrope Walker</h1>
+    <div class="recipes">
+      <h2>Tightrope Power Frittata</h2>
+
+
+    </div>
   </section>
 </div>
 
