--- a/frontend/views/recipes.ejs
+++ b/frontend/views/recipes.ejs
@@ -1,10 +1,14 @@
 <%- include('components/header') %>
 
   <section id="recipe-1">
-    <h1>Tightrope Walker</h1>
+    <h1>TIGHTROPE POWER FRITTATA</h1>
     <div class="recipes">
-      <h2>Tightrope Power Frittata</h2>
 
+      <img src="../public/img/eggs.png" alt="" class="eggs"/>
+
+      <img src="../public/img/frittata-in-pan.png" alt="" class="frittata"/>
+
+      <img src="../public/img/tightrope-walker.png" alt="" class="green-power"/>
 
     </div>
   </section>
