--- a/frontend/views/index.ejs
+++ b/frontend/views/index.ejs
@@ -9,7 +9,7 @@
         character suits you and what superfoods these amazing superhumans eat!
       </p>
       <div>
-        <a class="primary-btn" href="/quiz"
+        <a class="primary-btn btn" href="/quiz"
           >Take The Quiz!
           <div class="arrow-box"><span class="arrow">👉🏼</span></div></a
         >
@@ -71,7 +71,7 @@
         mollit anim id est laborum.
       </p>
       <a
-        class="primary-btn"
+        class="primary-btn btn"
         href="https://www.google.com/"
         target="_blank"
         rel="noopener noreferrer"
@@ -80,6 +80,129 @@
       </a>
 
       <h2>Contact Us</h2>
+      <!-- <div class="contact-icons">
+        <div class="circle one">
+          <a
+            class="social-media-btn btn"
+            href="https://twitter.com/"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <i class="bx bxl-twitter"></i>
+          </a>
+          <div class="text"><p>Follow Us On Twitter</p></div>
+        </div>
+
+        <div class="circle two">
+          <a
+            class="social-media-btn btn"
+            href="https://www.instagram.com/"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <i class="bx bxl-instagram"></i>
+          </a>
+          <div class="text"><p>Follow Us On Instagram</p></div>
+        </div>
+
+        <div class="circle three">
+          <a
+            class="social-media-btn btn"
+            href="https://www.facebook.com/"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <i class="bx bxl-facebook"></i>
+          </a>
+          <div class="text"><p>Follow Us On Facebook</p></div>
+        </div>
+
+        <div class="circle four">
+          <a
+            class="social-media-btn btn"
+            href="mailto: example@email.com"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <i class="bx bx-envelope"></i>
+          </a>
+          <div class="text"><p>Contact Us By Email</p></div>
+        </div>
+
+        <div class="circle five">
+          <a
+            class="social-media-btn btn"
+            href="https://wa.me/00000000000"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <i class="bx bxl-whatsapp"></i>
+          </a>
+          <div class="text"><p>Contact Us On WhatsApp</p></div>
+        </div>
+      </div> -->
+
+      <div class="contact-icons">
+        <div class="circle">
+          <a
+            href="https://www.instagram.com/"
+            target="_blank"
+            rel="noopener noreferrer"
+            class="neon-icon neon-icon__1"
+          >
+            <i class="bx bxl-instagram"></i
+          ></a>
+          <div class="text"><p>Follow Us On Instagram</p></div>
+        </div>
+
+        <div class="circle">
+          <a
+            href="https://wa.me/00000000000"
+            target="_blank"
+            rel="noopener noreferrer"
+            class="neon-icon neon-icon__2"
+          >
+            <i class="bx bxl-whatsapp"></i
+          ></a>
+          <div class="text"><p>Contact Us On WhatsApp</p></div>
+        </div>
+
+        <div class="circle">
+          <a
+            href="https://www.facebook.com/"
+            target="_blank"
+            rel="noopener noreferrer"
+            class="neon-icon neon-icon__3"
+          >
+            <i class="bx bxl-facebook"></i
+          ></a>
+          <div class="text"><p>Follow Us On Facebook</p></div>
+        </div>
+
+        <div class="circle">
+          <a
+            href="mailto: example@email.com"
+            target="_blank"
+            rel="noopener noreferrer"
+            class="neon-icon neon-icon__4"
+          >
+            <i class="bx bx-envelope"></i
+          ></a>
+          <div class="text"><p>Contact Us By Email</p></div>
+        </div>
+
+        <div class="circle">
+          <a
+            href="https://twitter.com/"
+            target="_blank"
+            rel="noopener noreferrer"
+            class="neon-icon neon-icon__5"
+          >
+            <i class="bx bxl-twitter"></i
+          ></a>
+          <div class="text"><p>Follow Us On Twitter</p></div>
+        </div>
+      </div>
     </div>
   </section>
 </div>
