--- a/frontend/views/index.ejs
+++ b/frontend/views/index.ejs
@@ -1,4 +1,5 @@
 <%- include('components/header') %>
+
 <div class="page-content">
   <section id="home">
     <div class="item1" data-aos="slide-right" data-aos-duration="1000">
@@ -10,7 +11,7 @@
       </p>
       <div>
         <a class="primary-btn btn" href="/quiz"
-          >Take The Quiz!
+          >Take The Quiz Now!
           <div class="arrow-box"><span class="arrow">👉🏼</span></div></a
         >
       </div>
@@ -22,7 +23,12 @@
       data-aos-duration="1500"
       data-aos-delay="400"
     >
-      <div class="circle-gradient watermelon"></div>
+      <div class="circle-gradient watermelon">
+        <div class="text-bubble">
+          <img src="../public/img/bubble-left.png" alt="" />
+          <span>Click Me!</span>
+        </div>
+      </div>
       <div class="character-item">
         <div class="card character">
           <div class="face front"></div>
@@ -37,7 +43,12 @@
       data-aos-duration="1500"
       data-aos-delay="800"
     >
-      <div class="circle-gradient yellow"></div>
+      <div class="circle-gradient yellow">
+        <div class="text-bubble">
+          <img src="../public/img/bubble-right.png" alt="" />
+          <span>Click Me!</span>
+        </div>
+      </div>
       <div class="food-item">
         <div class="card food">
           <div class="face front"></div>
@@ -75,73 +86,11 @@
         href="https://www.google.com/"
         target="_blank"
         rel="noopener noreferrer"
-        >Visit Vitafresh's website
+        >Visit the vitafresh site!
         <div class="arrow-box"><span class="arrow">👉🏼</span></div>
       </a>
 
       <h2>Contact Us</h2>
-      <!-- <div class="contact-icons">
-        <div class="circle one">
-          <a
-            class="social-media-btn btn"
-            href="https://twitter.com/"
-            target="_blank"
-            rel="noopener noreferrer"
-          >
-            <i class="bx bxl-twitter"></i>
-          </a>
-          <div class="text"><p>Follow Us On Twitter</p></div>
-        </div>
-
-        <div class="circle two">
-          <a
-            class="social-media-btn btn"
-            href="https://www.instagram.com/"
-            target="_blank"
-            rel="noopener noreferrer"
-          >
-            <i class="bx bxl-instagram"></i>
-          </a>
-          <div class="text"><p>Follow Us On Instagram</p></div>
-        </div>
-
-        <div class="circle three">
-          <a
-            class="social-media-btn btn"
-            href="https://www.facebook.com/"
-            target="_blank"
-            rel="noopener noreferrer"
-          >
-            <i class="bx bxl-facebook"></i>
-          </a>
-          <div class="text"><p>Follow Us On Facebook</p></div>
-        </div>
-
-        <div class="circle four">
-          <a
-            class="social-media-btn btn"
-            href="mailto: example@email.com"
-            target="_blank"
-            rel="noopener noreferrer"
-          >
-            <i class="bx bx-envelope"></i>
-          </a>
-          <div class="text"><p>Contact Us By Email</p></div>
-        </div>
-
-        <div class="circle five">
-          <a
-            class="social-media-btn btn"
-            href="https://wa.me/00000000000"
-            target="_blank"
-            rel="noopener noreferrer"
-          >
-            <i class="bx bxl-whatsapp"></i>
-          </a>
-          <div class="text"><p>Contact Us On WhatsApp</p></div>
-        </div>
-      </div> -->
-
       <div class="contact-icons">
         <div class="circle">
           <a
