--- a/frontend/public/css/home.css
+++ b/frontend/public/css/home.css
@@ -8,6 +8,7 @@
   display: grid;
   margin: 0 50px;
   min-height: 100vh;
+  padding-top: 0;
 }
 
 #home h1 {
@@ -39,6 +40,34 @@
 /*  images - flipping cards styling  */
 #home .circle-gradient {
   width: 200px;
+}
+
+.text-bubble {
+  position: relative;
+  top: 30px;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.item2 .text-bubble {
+  right: -200px;
+}
+
+.item3 .text-bubble {
+  left: -220px;
+}
+
+.text-bubble img {
+  width: 150px;
+  height: auto;
+}
+
+.text-bubble span {
+  position: absolute;
+  font-family: var(--heading-font-family);
+  font-size: 1.8em;
 }
 
 .character-item,
@@ -161,6 +190,23 @@
 
   .food-item {
     height: 200px;
+  }
+
+  .item2 .text-bubble,
+  .item3 .text-bubble {
+    top: 40px;
+  }
+
+  .text-bubble img {
+    width: 200px;
+  }
+
+  .item2 .text-bubble {
+    right: -300px;
+  }
+
+  .item3 .text-bubble {
+    left: -320px;
   }
 }
 
@@ -325,12 +371,8 @@
 .contact-icons {
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
 }
-
-/*
-.five .social-media-btn:after {
-  background-color: #b4f8bb;
-} */
 
 @keyframes rotateText {
   0% {
