--- a/frontend/views/components/footer.ejs
+++ b/frontend/views/components/footer.ejs
@@ -1,4 +1,5 @@
 <footer><p>&copy;2022 The Red Team</p></footer>
+<div id="sparkles"></div>
 
 <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 <script src="https://unpkg.com/boxicons@2.1.3/dist/boxicons.js"></script>
