--- a/frontend/views/index.ejs
+++ b/frontend/views/index.ejs
@@ -25,7 +25,12 @@
     >
       <div class="circle-gradient watermelon">
         <div class="text-bubble">
-          <img src="../public/img/bubble-left.png" alt="" />
+          <img class="left-bubble" src="../public/img/bubble-left.png" alt="" />
+          <img
+            class="right-bubble"
+            src="../public/img/bubble-right.png"
+            alt=""
+          />
           <span>Click Me!</span>
         </div>
       </div>
@@ -45,7 +50,11 @@
     >
       <div class="circle-gradient yellow">
         <div class="text-bubble">
-          <img src="../public/img/bubble-right.png" alt="" />
+          <img
+            class="right-bubble"
+            src="../public/img/bubble-right.png"
+            alt=""
+          />
           <span>Click Me!</span>
         </div>
       </div>
