adds alt attribute values in images for accessibility

--- a/frontend/views/components/header.ejs
+++ b/frontend/views/components/header.ejs
@@ -15,7 +15,7 @@
   <body>
     <nav>
       <!-- Image -->
-      <a href="/"><img src="img/vitafun-logo.png" alt="Logo" /></a>
+      <a href="/"><img src="img/vitafun-logo.png" alt="VitaFun's Logo" /></a>
       <ul id="menu">
         <!-- Link to home -->
         <li class="link home">
@@ -58,25 +58,20 @@
         <ul id="dropdown-menu">
           <!-- Link to home -->
           <li class="link home"><a href="/">home</a></li>
-          <hr />
 
           <!-- Link to about -->
           <li class="link about"><a href="/#about">about</a></li>
-          <hr />
 
           <!-- Link to quiz -->
           <li class="link quiz"><a href="/quiz">quiz</a></li>
-          <hr />
 
           <!-- Link to superfood circus -->
           <li class="link superfood-circus">
             <a href="/superfoodcircus">superfood circus</a>
           </li>
-          <hr />
 
           <!-- Link to recipes -->
           <li class="link recipes"><a href="/recipes">recipes</a></li>
-          <hr />
 
           <!-- Link to vitafresh -->
           <li class="link vitafresh">
@@ -90,4 +85,8 @@
         </ul>
       </div>
     </nav>
-    <img src="../public/img/flag-hangings.png" class="hangings" />
+    <img
+      src="../public/img/flag-hangings.png"
+      class="hangings"
+      alt="Colourful flag hangings"
+    />
