--- a/frontend/views/index.ejs
+++ b/frontend/views/index.ejs
@@ -25,11 +25,15 @@
     >
       <div class="circle-gradient watermelon">
         <div class="text-bubble">
-          <img class="left-bubble" src="../public/img/bubble-left.png" alt="" />
+          <img
+            class="left-bubble"
+            src="../public/img/bubble-left.png"
+            alt="text bubble that reads click me"
+          />
           <img
             class="right-bubble"
             src="../public/img/bubble-right.png"
-            alt=""
+            alt="text bubble that reads click me"
           />
           <span>Click Me!</span>
         </div>
@@ -53,7 +57,7 @@
           <img
             class="right-bubble"
             src="../public/img/bubble-right.png"
-            alt=""
+            alt="text bubble that reads click me"
           />
           <span>Click Me!</span>
         </div>
@@ -107,6 +111,7 @@
             target="_blank"
             rel="noopener noreferrer"
             class="neon-icon neon-icon__1"
+            alt="Instagram's icon"
           >
             <i class="bx bxl-instagram"></i
           ></a>
@@ -119,6 +124,7 @@
             target="_blank"
             rel="noopener noreferrer"
             class="neon-icon neon-icon__2"
+            alt="WhatsApp's icon"
           >
             <i class="bx bxl-whatsapp"></i
           ></a>
@@ -131,6 +137,7 @@
             target="_blank"
             rel="noopener noreferrer"
             class="neon-icon neon-icon__3"
+            alt="Facebook's icon"
           >
             <i class="bx bxl-facebook"></i
           ></a>
@@ -139,10 +146,11 @@
 
         <div class="circle">
           <a
-            href="mailto: example@email.com"
+            href="mailto:example@email.com"
             target="_blank"
             rel="noopener noreferrer"
             class="neon-icon neon-icon__4"
+            alt="Envelope icon"
           >
             <i class="bx bx-envelope"></i
           ></a>
@@ -155,6 +163,7 @@
             target="_blank"
             rel="noopener noreferrer"
             class="neon-icon neon-icon__5"
+            alt="Twitter's icon"
           >
             <i class="bx bxl-twitter"></i
           ></a>
