adds aria-labels for accessibility

--- a/frontend/views/index.ejs
+++ b/frontend/views/index.ejs
@@ -111,7 +111,7 @@
             target="_blank"
             rel="noopener noreferrer"
             class="neon-icon neon-icon__1"
-            alt="Instagram's icon"
+            aria-label="Go to our instagram page"
           >
             <i class="bx bxl-instagram"></i
           ></a>
@@ -124,7 +124,7 @@
             target="_blank"
             rel="noopener noreferrer"
             class="neon-icon neon-icon__2"
-            alt="WhatsApp's icon"
+            aria-label="Contact us through WhatsApp"
           >
             <i class="bx bxl-whatsapp"></i
           ></a>
@@ -137,7 +137,7 @@
             target="_blank"
             rel="noopener noreferrer"
             class="neon-icon neon-icon__3"
-            alt="Facebook's icon"
+            aria-label="Go to our Facebook page"
           >
             <i class="bx bxl-facebook"></i
           ></a>
@@ -150,7 +150,7 @@
             target="_blank"
             rel="noopener noreferrer"
             class="neon-icon neon-icon__4"
-            alt="Envelope icon"
+            aria-label="Contact us by email"
           >
             <i class="bx bx-envelope"></i
           ></a>
@@ -163,7 +163,7 @@
             target="_blank"
             rel="noopener noreferrer"
             class="neon-icon neon-icon__5"
-            alt="Twitter's icon"
+            aria-label="Go to our twitter page"
           >
             <i class="bx bxl-twitter"></i
           ></a>
