replaces lorem text with real content

--- a/frontend/views/index.ejs
+++ b/frontend/views/index.ejs
@@ -75,24 +75,31 @@
     <div class="about-text">
       <h2>The Website</h2>
       <p class="about-site">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-        occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-        mollit anim id est laborum.
+        Get ready for a wild and delicious ride with VitaFun! We're a
+        one-stop-site for fun and healthy living, where kids and adults alike
+        can join forces to create a brighter, healthier future. Step right up
+        and discover the amazing world of superfoods at our Superfood Circus!
+        Take our quiz to find out which circus character you are, and learn all
+        about the superfoods they munch on. And don't worry, we've got you
+        covered with delicious, healthy, and easy recipes that'll make you feel
+        like a pro in the kitchen. But most importantly, remember to have fun!
+        So come on in, the circus is in town!
       </p>
 
       <h2>The Organisation</h2>
       <p class="about-org">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-        occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-        mollit anim id est laborum.
+        At VitaFresh, we believe in promoting a healthy lifestyle through the
+        manufacturing and selling of fresh produce. We've been spreading the
+        good word about healthy living since 1982, starting in Ballarat,
+        Victoria and now with 25 locations across Australia and Southeast Asia.
+        With our strong partnerships with top companies and fresh produce
+        growers, we're a powerhouse in the healthy living industry. Recently, we
+        made a major investment in encouraging young people to live a healthy
+        lifestyle. We believe that educating individuals about the importance of
+        starting a healthy lifestyle at a young age is key to building a
+        healthier future. And we're taking action with VitaFun, our exciting
+        initiative that makes healthy living a blast! So join us today and let's
+        make a change together!
       </p>
       <a
         class="primary-btn btn"
