adds AOS animation to about section

--- a/frontend/views/index.ejs
+++ b/frontend/views/index.ejs
@@ -71,8 +71,8 @@
     </div>
   </section>
   <section id="about">
-    <h1>ABOUT</h1>
-    <div class="about-text">
+    <h1 data-aos="slide-right" data-aos-duration="1000">ABOUT</h1>
+    <div class="about-text" data-aos="slide-right" data-aos-duration="1000">
       <h2>The Website</h2>
       <p class="about-site">
         Get ready for a wild and delicious ride with VitaFun! We're a
