--- a/frontend/views/recipes.ejs
+++ b/frontend/views/recipes.ejs
@@ -3,19 +3,21 @@
 <div class="recipes">
 
   <section id="recipe-1">
-    
-    <h1>TIGHTROPE POWER FRITTATA</h1>
-    <div class="recipes">
 
-      <div class="grid-container">
+
+    <h1>TIGHTROPE POWER FRITTATA</h1>
+
+    <div class="recipes1" style="background-image: url('../public/img/bg-image1.png');">
+    
+    <div class="grid-container">
 
       <img src="../public/img/eggs.png" alt="" class="eggs"/>
 
       <img src="../public/img/frittata-in-pan.png" alt="" class="frittata"/>
 
       <img src="../public/img/tightrope-walker.png" alt="" class="tightrope-power"/>
-
     </div>
+
     </div>
   </section>
 
@@ -40,4 +42,4 @@
 </div>
 </div>
 
-<%- include('components/footer') %>
+
