--- a/frontend/public/css/recipes.css
+++ b/frontend/public/css/recipes.css
@@ -21,10 +21,12 @@
 #recipe-1 .recipes1{
     background-repeat: no-repeat;
     background-position: center;
-    background-size: cover;
+    background-size: contain;
     /*
     padding-top: 20px; */
 }
+
+
 
 .eggs{
     max-width: 25%;
@@ -54,7 +56,7 @@
 }
 
 .frittata{
-    max-width: 85%;
+    max-width: 75%;
     height: auto;
     /*
     height: 150px;
