--- a/frontend/views/recipes.ejs
+++ b/frontend/views/recipes.ejs
@@ -7,9 +7,12 @@
 
     <h1>TIGHTROPE POWER FRITTATA</h1>
 
-    <div class="recipes1" style="background-image: url('../public/img/bg-image1.png');">
-    
+
+    <div class="recipes1" style="background-image: url('../public/img/bg-image-recipes.png');">
+
+  
     <div class="grid-container">
+
 
       <img src="../public/img/eggs.png" alt="" class="eggs"/>
 
@@ -42,4 +45,4 @@
 </div>
 </div>
 
-
+<%- include('components/footer') %>
