--- a/frontend/public/css/recipes.css
+++ b/frontend/public/css/recipes.css
@@ -12,20 +12,22 @@
     width: 50%;
     text-align: center;
     color: var(--vita-yellow);
-    /*
-    color: #26FF60;
-    */
-
 } 
 
 #recipe-1 .recipes1{
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
-    /*
-    padding-top: 20px; */
 }
 
+/* Position text over background image */
+
+.recipes1 h2{
+    position: absolute;
+    color: var(--vita-green);
+    padding-left: 40%;
+    padding-top: 50px;
+}
 
 
 .eggs{
@@ -36,10 +38,6 @@
     width: auto; */
     grid-column: 4;
     grid-row: 1/5;
-    /*
-    position: relative;
-    float: right;
-    padding-right: 30%; */
 }
 
 .tightrope-power{
@@ -50,9 +48,6 @@
     width: auto; */
     grid-column: 4;
     grid-row: 5/5;
-    /*
-    position: relative;
-    float: right; */
 }
 
 .frittata{
@@ -63,10 +58,6 @@
     width: auto; */
     grid-column: 2;
     grid-row: 5/5;
-    /*
-    position: relative;
-    float: left;
-    padding-left: 20%; */
 }
 
 .grid-container-2 {
