--- a/frontend/views/recipes.ejs
+++ b/frontend/views/recipes.ejs
@@ -10,6 +10,11 @@
 
     <div class="recipes1" style="background-image: url('../public/img/bg-image-recipes.png');">
 
+    <!-- Insert h2 and numbered list-style recipe paragraph inside bg image without being in grid containers - or if easier 
+      can be placed inside grid containers? -->
+      <h2>Recipe Subheading Placement</h2>
+
+
   
     <div class="grid-container">
 
@@ -19,6 +24,7 @@
       <img src="../public/img/frittata-in-pan.png" alt="" class="frittata"/>
 
       <img src="../public/img/tightrope-walker.png" alt="" class="tightrope-power"/>
+
     </div>
 
     </div>
