--- a/frontend/public/css/recipes.css
+++ b/frontend/public/css/recipes.css
@@ -22,19 +22,34 @@
 
 /* Position text over background image */
 
+/*
 .recipes1 h2{
     position: absolute;
     color: var(--vita-green);
     padding-left: 40%;
+    padding-top: 40px;
+}
+*/
+
+.recipes1 ol{
+    position: absolute;
+    color: black;
+    /*padding-left: 40%; */
+    padding-left: 600px;
     padding-top: 50px;
+}
+
+.recipes1 ol li{
+    width: 220px;
+    /*
+    text-align: center; */
 }
 
 
 .eggs{
     max-width: 25%;
     height: auto;
-    /*
-    height: 75px;
+    /*height: 75px;
     width: auto; */
     grid-column: 4;
     grid-row: 1/5;
@@ -81,9 +96,8 @@
 
 .chocolate{
     max-width: 25%;
-    height: auto;
-    /*
-    height: 65px;
+    height: auto;  
+    /*height: 65px;
     width: auto; */
     grid-column: 4;
     grid-row: 1/5;
@@ -102,8 +116,7 @@
 .waffle{
     max-width: 100%;
     height: auto;
-    /*
-    height: 130px;
+    /* height: 130px;
     width: auto; */
     grid-column: 2;
     grid-row: 5/5;
