--- a/frontend/views/recipes.ejs
+++ b/frontend/views/recipes.ejs
@@ -8,11 +8,21 @@
     <h1>TIGHTROPE POWER FRITTATA</h1>
 
 
-    <div class="recipes1" style="background-image: url('../public/img/bg-image-recipes.png');">
+    <div class="recipes1" style="background-image: url('../public/img/bg-recipes.png');">
 
     <!-- Insert h2 and numbered list-style recipe paragraph inside bg image without being in grid containers - or if easier 
       can be placed inside grid containers? -->
+      <!--
       <h2>Recipe Subheading Placement</h2>
+    -->
+
+      <ol class="how-to">
+        <li>Massage kale under running tap for 2 minutes to wash and soften. </li>
+        <li>Chop vegetables. Cut broccoli into segments, cherry tomatoes into halves, kale leaf into fine strips. Finely chop onion.</li>
+        <li>Boil broccoli for 7 minutes</li>
+        <li>Heat oil in a non-stick frypan. Lightly fry broccoli, kale, cherry tomatoes, and onion.</li>
+        <li>Beat eggs and milk, pour over.</li>
+      </ol>
 
 
   
